--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,247 @@
-body{background-color:#000;color:#fff}.container00{background-position:center;background-repeat:no-repeat;background-size:cover;height:100vh}.containerTitle{font-size:32px;font-weight:100;color:#e69d00}.topPadding{padding-top:200px}.shadowText{text-shadow:1px 1px 50px #000}.shadowBox{box-shadow:rgba(0,0,0,.35) 0px 5px 15px}.titleContent{color:#e69d00;font-family:"Roboto",sans-serif;font-size:80px;font-weight:100}.subtitleContent{font-family:"Roboto",sans-serif;font-size:18px;font-weight:300;line-height:20px;text-transform:uppercase}.button{border-color:#e69d00;color:#e69d00;padding:1em 5em;font-size:20px}.container00.container01{background-image:url("../img/lamborghini-banner.jpg")}.container00.carousel01{background-color:red}#headerContent{color:#e69d00}.headerLogo{width:200px}.headerIcon{color:#bf7c00;font-size:14px;padding:.5em}.containerBrands,.containerSalesman{text-align:center;background-color:#fff;padding:1em 0}.containerContent{padding-bottom:120px}.carouselBrands{display:flex;gap:20px;overflow-x:scroll;padding:1em .5em;scrollbar-color:#e69d00 rgba(0,0,0,0)}.carcardCarouselBrands{align-items:center;display:flex;justify-content:center;min-height:120px;min-width:300px}.cardCarouselImage{width:auto;max-height:75px}.containerCars{display:flex;align-items:center;overflow-x:scroll;padding:1em 0;scrollbar-color:#e69d00 rgba(0,0,0,0);gap:20px}.cardCar{min-height:470px;min-width:300px}.cardCarImage{min-height:230px;background:url("../img/default.png") center/cover no-repeat}.carContainer{padding:.5em 1em;line-height:10px;text-align:center;color:#000}.carContent{display:flex;justify-content:center;gap:5px;padding:.5em 0}.carTitle{font-size:1.5em;font-weight:300;text-transform:uppercase}.carPrice{color:#8a3e00;font-size:1.7em;font-weight:600}.carColor{color:#301f00}.carYear{color:#8a3e00}.carSpec{font-weight:600}.salesman{margin-top:30px;padding:1em;display:flex;flex-direction:column;gap:10px;color:#000}.salesman:hover{background-color:#e69d00}.salesmanName{font-size:2em;font-weight:300}.salesmanDesc{color:#301f00;font-size:.8em;font-weight:700;text-transform:uppercase;letter-spacing:2px}.salesmanImage{border:1px solid #301f00;border-radius:100%;margin:0 auto;width:200px;height:200px}.salesmanImage.salesmanImage--default{background:url("../img/default.png") center/cover no-repeat}.salesmanImage.salesmanImage--tcar{background:url("../img/tcar.jpg") center/cover no-repeat}/*# sourceMappingURL=style.css.map */
+body {
+  background-color: black;
+  color: white;
+}
+
+.container00 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+.containerTitle {
+  font-size: 32px;
+  font-weight: 100;
+  color: #e69d00;
+}
+
+.topPadding {
+  padding-top: 200px;
+}
+
+.shadowText {
+  text-shadow: 1px 1px 50px #000000;
+}
+
+.shadowBox {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.titleContent {
+  color: #e69d00;
+  font-family: "Roboto", sans-serif;
+  font-size: 80px;
+  font-weight: 100;
+}
+
+.subtitleContent {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.button {
+  border-color: #e69d00;
+  color: #e69d00;
+  padding: 1em 5em;
+  font-size: 20px;
+}
+
+.container00.container01 {
+  background-image: url("../img/lamborghini-banner.jpg");
+}
+.container00.carousel01 {
+  background-color: red;
+}
+
+#headerContent {
+  color: #e69d00;
+}
+
+.headerLogo {
+  width: 200px;
+}
+
+.headerIcon {
+  color: #bf7c00;
+  font-size: 14px;
+  padding: 0.5em;
+}
+
+.containerBrands,
+.containerSalesman {
+  text-align: center;
+  background-color: white;
+  padding: 1em 0;
+}
+
+.containerPopular {
+  background-color: #0e0c0a;
+}
+
+#popularTitle {
+  color: #f5cd69;
+}
+
+.containerContent {
+  padding-bottom: 120px;
+}
+
+.carouselBrands {
+  display: flex;
+  gap: 20px;
+  overflow-x: scroll;
+  padding: 1em 0.5em;
+  scrollbar-color: #e69d00 transparent;
+}
+
+.carcardCarouselBrands {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  min-height: 120px;
+  min-width: 300px;
+}
+
+.cardCarouselImage {
+  width: auto;
+  max-height: 75px;
+}
+
+.containerCars {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 1em 0;
+  scrollbar-color: #e69d00 transparent;
+  gap: 5px;
+}
+.containerCars.carouselCars {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  overflow-x: scroll;
+}
+
+.cardCar {
+  min-height: 470px;
+  min-width: 300px;
+}
+.cardCar.cardPopularCar {
+  min-height: 300px;
+  min-width: 100%;
+}
+
+.cardCarImage {
+  min-height: 230px;
+  background: url("../img/default.png") center/cover no-repeat;
+}
+.cardCarImage.cardPopularCarImage {
+  min-height: 120px;
+}
+
+.carContainer {
+  padding: 0.5em 1em;
+  line-height: 10px;
+  text-align: center;
+  color: #000000;
+}
+.carContainer.popularCarContainer {
+  text-align: left;
+  line-height: 8px;
+  padding: 0.4em;
+}
+
+.carContent {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  padding: 0.5em 0;
+}
+.carContent.popularCarContent {
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+  justify-content: center;
+  font-size: 0.8em;
+  margin-left: 0.3em;
+}
+
+.carTitle {
+  font-size: 1.5em;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.carTitle.popularCarTitle {
+  max-width: 100%;
+  font-size: 1.1em;
+}
+
+.carPrice {
+  color: #8a3e00;
+  font-size: 1.7em;
+  font-weight: 600;
+}
+.carPrice.popularCarPrice {
+  font-size: 1.4em;
+}
+
+.carColor {
+  color: #301f00;
+}
+.carColor.popularCarColor {
+  font-size: 1em;
+}
+
+.carYear {
+  color: #8a3e00;
+}
+.carYear.popularCarYear {
+  font-size: 1em;
+}
+
+.carSpec {
+  font-weight: 600;
+}
+
+.salesman {
+  margin-top: 30px;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: black;
+}
+.salesman:hover {
+  background-color: #e69d00;
+}
+
+.salesmanName {
+  font-size: 2em;
+  font-weight: 300;
+}
+
+.salesmanDesc {
+  color: #301f00;
+  font-size: 0.8em;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.salesmanImage {
+  border: 1px solid #301f00;
+  border-radius: 100%;
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
+}
+.salesmanImage.salesmanImage--default {
+  background: url("../img/default.png") center/cover no-repeat;
+}
+.salesmanImage.salesmanImage--tcar {
+  background: url("../img/tcar.jpg") center/cover no-repeat;
+}
+
+/*# sourceMappingURL=style.css.map */
