--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,6 @@ body {
 .carContent.popularCarContent {
   display: grid;
   grid-template-columns: repeat(2, 2fr);
-  justify-content: center;
   font-size: 0.8em;
   margin-left: 0.3em;
 }
@@ -203,6 +202,9 @@ body {
 
 .carSpec {
   font-weight: 600;
+}
+.carSpec.popularCarSpec {
+  text-align: end;
 }
 
 .salesman {
