--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -92,7 +92,6 @@
    &.popularCarContent {
       display: grid;
       grid-template-columns: repeat(2, 2fr);
-      justify-content: center;
       font-size: 0.8em;
       margin-left: 0.3em;
    }
@@ -137,6 +136,10 @@
 
 .carSpec {
    font-weight: 600;
+
+   &.popularCarSpec {
+      text-align: end;
+   }
 }
 
 .salesman {
