Finishing home page & adding car page

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@ $black: #000000;
 $dark-gold: #301f00;
 $dark-orange: #8a3e00;
 $gold: #e69d00;
+$gold-gray: #e7d3a8;
 $secondary-gold: #bf7c00;
 $yellow: #f5cd69;
 
