--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,6 +6,10 @@
    &.carousel01 {
       background-color: red;
    }
+
+   &.container02 {
+      background-color: transparent;
+   }
 }
 
 #headerContent {
